--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Mike Sackett
-bio: A man on a mission
+bio: Coming Soon
 
 # twitter summary info
 description: A blog about technology and stuff related
