--- a/_config.yml
+++ b/_config.yml
@@ -37,19 +37,19 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
+facebook: https://www.facebook.com/msackett04
 #twitter: mytwitter
-# google: mygoogle
+ google: https://plus.google.com/106464943658355796699
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: https://github.com/mikesackett85
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+# medium: medium
 # vimeo: myvimeo
 email: mikesackett.85@gmail.com
 
