--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ github: mikesackett85
 # reddit: username
 # medium: medium
 # vimeo: myvimeo
-email: mikesackett.85@gmail.com
+email: mikesackett.85
 
 authors:
     johndoe:
