--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: indigo/assets/images/profile.jpg
+picture: mikesackett85.github.io/assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -39,7 +39,7 @@ disqus:
 # if you don't have any of social below, comment the line
 facebook: msackett04
 # twitter: mytwitter
-google: mikesackett.85
+# google: mikesackett.85
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
@@ -77,7 +77,7 @@ width: normal
 # paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
-projects: true
+projects: false
 
 # if you don't need "about" or "blog", comment them out below
 about: true
