--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Mike Sackett
 bio: Coming Soon
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: A blog about Chrome OS, Linux, and other things I find interesting...
 
 # if it's an external image, update below for true
 # better with square images
