--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Mike Sackett
 bio: Coming Soon
 
 # twitter summary info
-description: A blog about Chrome OS, Linux, and other things I find interesting...
+description: Learning to Hack - the noob chronicles
 
 # if it's an external image, update below for true
 # better with square images
@@ -39,7 +39,7 @@ disqus:
 # if you don't have any of social below, comment the line
 facebook: msackett04
 # twitter: mytwitter
-# google: mikesackett.85
+google: MichaelSackett85
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
