--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Mike Sackett
 bio: Coming Soon
 
 # twitter summary info
-description: My tech blog about hardware, Linux, Chrome OS, and anything else I find interesting.
+description: My Security Blog
 # if it's an external image, update below for true
 # better with square images
 external-image: false
